--- a/stilovi.css
+++ b/stilovi.css
@@ -28,6 +28,12 @@ body{
 }
 .vijesti{
     font-size: 50px;
+    text-decoration: none;
+    display: block;
+}
+.vijest1 a{
+    text-decoration: none;
+    color:black;
 }
 .vijest1{
     text-align: center;
