--- a/stilovi.css
+++ b/stilovi.css
@@ -46,9 +46,17 @@ body{
     height: auto;
     border-radius: 5px;
 }
+.vijest2 a{
+    text-decoration: none;
+    color:black;
+}
 .vijest3{
     text-align: center;
     height: auto;
+}
+.vijest3 a{
+    text-decoration: none;
+    color:black;
 }
 .vijest1:hover{
     background-color: darkgrey;
@@ -85,6 +93,7 @@ body{
     background-color: darkgrey;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-radius: 8px;
+    font-size: 20px;
 }
 .povijest{
     background-color: darkgrey;
@@ -94,4 +103,8 @@ body{
 }
 .center{
     text-align: center;
+}
+.Rudar{
+    color:green;
+    font-size: 25px;
 }
