--- a/stilovi.css
+++ b/stilovi.css
@@ -1,5 +1,5 @@
 body{
-    background-color: whitesmoke;
+    background-color: #dadce0;
     text-align: center;
     font-family: Arial, sans-serif;
 }
